v0.1a0/_sources/tutorials/index.rst.txt
:orphan:

.. _tutorials:

Tutorials
=========



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Often times, raw spatial data can be highly oversampled in a direction. In these cases, we need...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_decimation_thumb.png

        :ref:`sphx_glr_tutorials_decimation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/decimation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Verde provides classes and functions for processing spatial data, like bathymetry, GPS, tempera...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_overview_thumb.png

        :ref:`sphx_glr_tutorials_overview.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/overview

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Trend estimation and removal is a common operation, particularly when dealing with geophysical ...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_trend_estimation_thumb.png

        :ref:`sphx_glr_tutorials_trend_estimation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/trend_estimation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="One of the advantages of using a Green&#x27;s functions approach to interpolation is that we can eas...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_weights_thumb.png

        :ref:`sphx_glr_tutorials_weights.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/weights
.. raw:: html

    <div style='clear:both'></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
