v1.3.0/_sources/tutorials/index.rst.txt
:orphan:



.. _sphx_glr_tutorials:

.. _tutorials:

Tutorials
=========



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Often, a data processing pipeline looks like the following:">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_chain_thumb.png

     :ref:`sphx_glr_tutorials_chain.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/chain

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Often times, raw spatial data can be highly oversampled in a direction. In these cases, we need...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_decimation_thumb.png

     :ref:`sphx_glr_tutorials_decimation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/decimation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Creating the coordinates for regular grids in Verde is done using the  verde.grid_coordinates f...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_grid_coordinates_thumb.png

     :ref:`sphx_glr_tutorials_grid_coordinates.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/grid_coordinates

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The Green&#x27;s functions based interpolations in Verde are all linear regressions under the hood. ...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_model_evaluation_thumb.png

     :ref:`sphx_glr_tutorials_model_evaluation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/model_evaluation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In model_evaluation, we saw how to check the performance of an interpolator using cross-validat...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_model_selection_thumb.png

     :ref:`sphx_glr_tutorials_model_selection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/model_selection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Verde provides classes and functions for processing spatial data, like bathymetry, GPS, tempera...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_overview_thumb.png

     :ref:`sphx_glr_tutorials_overview.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/overview

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Most gridders and processing methods in Verde operate under the assumption that the data coordi...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_projections_thumb.png

     :ref:`sphx_glr_tutorials_projections.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/projections

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Trend estimation and removal is a common operation, particularly when dealing with geophysical ...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_trends_thumb.png

     :ref:`sphx_glr_tutorials_trends.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/trends

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Some datasets have multiple vector components measured for each location, like the East and Wes...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_vectors_thumb.png

     :ref:`sphx_glr_tutorials_vectors.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/vectors

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="One of the advantages of using a Green&#x27;s functions approach to interpolation is that we can eas...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_weights_thumb.png

     :ref:`sphx_glr_tutorials_weights.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/weights
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
